--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "^1.10.4",
     "@sanity/vision": "^3.51.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.7",
+    "lucide-react": "^0.411.0",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.51.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
