--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.7",
     "lucide-react": "^0.411.0",
+    "mapbox-gl": "^3.5.2",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.7",
     "sanity": "^3.51.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
