--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/vision": "^3.51.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.1.7",
     "lucide-react": "^0.411.0",
     "mapbox-gl": "^3.5.2",
